tests/ui/codegen/evm-ir/validation/parse_unknown_block.evmir
@module UnknownBlock

bb0:
  jump bb9 //~ ERROR: unknown block `bb9`
